--- a/7-9.html
+++ b/7-9.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <script>
-        if(confirm("Hello World!")) {
-            document.write("Yes")
-        } else {
-            document.write("No");
-        }
+        /*
+        eval() 문자열을 수식으로 변환
+        */
+       
+        document.write(eval(2+4*3) + "<br>");
     </script>
 </body>
 </html>
