--- a/7-1.html
+++ b/7-1.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <script>
-        if(confirm("Hello World!")) {
-            document.write("Yes")
-        } else {
-            document.write("No");
+        gu=7;
+
+        i=1;
+        while(i<=9) {
+            document.write(gu + " * " + i + " = " + (gu*i) + "<br>");
+            i++;
         }
     </script>
 </body>
