--- a/7-3.html
+++ b/7-3.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <script>
-        if(confirm("Hello World!")) {
-            document.write("Yes")
-        } else {
-            document.write("No");
+        let sum = 0;
+        for(let i = 1; i <= 10; i++) {
+            if(i%3 != 1) continue;
+        document.write(i + " ");
+        sum = sum + i;
         }
+        document.write("합은 " + sum);
     </script>
 </body>
 </html>
