--- a/7-4.html
+++ b/7-4.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <script>
-        if(confirm("Hello World!")) {
-            document.write("Yes")
-        } else {
-            document.write("No");
+        for(i = 1; i <= 2; i++) {
+            document.write("<br>" + i + "<br>");
+            for(j = 1; j <= 3; j++) {
+                document.write(j + " ");
+            }
         }
     </script>
 </body>
