--- a/Week12/2-1.html
+++ b/Week12/2-1.html
@@ -3,35 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>setInterval()로 텍스트 회전</title>
-</head>
-<body>
-    <h3>텍스트가 자동 회전하며, 마우스로 클릭하면 중단합니다.</h3>
-    <hr>
-    <div>
-        <span id="span" style="background-color: yellow">자동으로 회전하는 텍스트입니다.</span>
-    </div>
+    <title>Document</title>
     <script>
         /*
-        setTimeout과 마찬가지로 일전 시간 후 함수를 실행하지만, 반복하지 않고 처음 한 번만 호출
-        setInterval() 일정 시간마다 함수를 반복적으로 호출하는 메서드. 함수를 자신이 원하는 시간마다 반복
-        clearInterval은 간단하게 말하면 setInterval과 setTimeout을 중지하는 메서드
+        window.location.href javascript 프로그램에서 하이퍼링크 작업시 사용
         */
+       function changeCSS() {
+        var p=document.getElementById("myLink");
+        var t=document.getElementById("myText");
 
-        span = document.getElementById("span");
-        timerID = setInterval("doRotate()", 200); // 200밀리초 주기로 doRotate() 호출
+        p.style.color="blue"
+        p.style.fontSize="18pt"
 
-        span.onclick = function(event) { //마우스 클릭 이벤트 리스너
-        clearInterval(timerID); //타이머 해제. 문자열 회전 중단
-        }
-
-        function doRotate() {
-            str = span.innerHTML;
-            firstChar = str.substr(0, 1);
-            remains = str.substr(1, str.length-1);
-            str = remains + firstChar;
-            span.innerHTML = str;
-        }
+        t.style.color="red"
+        t.style.color="25pt"
+       }
     </script>
+</head>
+<body>
+    <p id="myLink" onclick="window.location.href = 'http://www.naver.com/';">네이버 가기!!</p>
+    <h2 id="myText">안녕하세요~</h2>
+    <form>
+        <p>
+            <input value="rec" type="button" onclick="changeCSS();">
+        </p>
+    </form>
 </body>
 </html>
