--- a/Week12/3-1.html
+++ b/Week12/3-1.html
@@ -3,25 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>window.location으로 웹 사이트 접속</title>
+    <title>Document</title>
+    <script>
+        /*
+        createElement : 지정된 태그생성
+        createTextNode : 지정된 태그내에 텍스트 생성
+        appendChild : 자식으로 추가
+        */
+       function addRows() {
+        var mydoc=document;
+        var p=mydoc.getElementById("myTable");
+        var tbodyElement = p.getElementsByTagName("tbody")[0];
+
+        var trElement = mydoc.createElement("tr");
+        var tdElement = mydoc.createElement("td");
+        var tdElement2 = mydoc.createElement("td");
+        var txtElement = mydoc.createTextNode("red");
+        var txtElement2 = mydoc.createTextNode("blue");
+
+        tdElement.appendChild(txtElement);
+        tdElement2.appendChild(txtElement2);
+        trElement.appendChild(tdElement);
+        trElement.appendChild(tdElement2);
+        tbodyElement.appendChild(trElement);
+        p.appendChild(tbodyElement);
+       }
+    </script>
 </head>
 <body>
-    <h3>window.location으로 웹사이트 접속</h3>
-    <hr>
-    사이트 선택 :
-    <select id="site">
-        <option value="http://www.naver.com" selected>네이버</option>
-        <option value="http://www.google.com" selected>구글</option>
-        <option value="http://www.microsoft.com" selected>마이크로소프트</option>
-    </select>
-    <p>
-        <button onclick="load()">웹 사이트 접속</button>
-    </p>
-    <script>
-        function load() {
-            select = document.getElementById("site");
-            window.location = select.options[select.selectedIndex].value;
-        }
-    </script>
+    <h2 id="myText">테이블 한줄을 추가</h2>
+    <form>
+        <table border="1" id="myTable">
+            <tr>
+                <td>사과</td>
+                <td>수박</td>
+            </tr>
+        </table>
+        <p>
+            <input value="행추가" type="button" onclick="addRows();">
+        </p>
+    </form>
 </body>
 </html>
